--- a/zuul-zuulconfig.properties
+++ b/zuul-zuulconfig.properties
@@ -6,3 +6,5 @@ zuul.routes.trackapp1.url=http://localhost:8090/swagger-ui.html
 
 zuul.routes.trackapp2.path=/musix-api/**
 zuul.routes.trackapp2.url=http://localhost:8090/tracks/track
+
+msg = InzullConfig
