--- a/zuul.properties
+++ b/zuul.properties
@@ -3,8 +3,8 @@ server.port=8088
 #zuul.routes.trackapp.path=/main-page/**
 #zuul.routes.trackapp.url=http://localhost:8090/
 
-zuul.routes.trackapp2.path=/musix-api/**
-zuul.routes.trackapp2.url=http://localhost:8090/tracks/track
+zuul.routes.trackapp1.path=/tracks/**
+zuul.routes.trackapp1.url=http://localhost:8090/tracks/track
 
 zuul.routes.trackapp2.path=/trackByName/**
 zuul.routes.trackapp2.url=http://localhost:8090/tracks/byName
